Bug 928674: Add static_cast to explicitly convert RelationType enum values into integer values, to fix build error. r=surkov