accessible/src/windows/msaa/AccessibleWrap.cpp
@@ -921,55 +921,55 @@ AccessibleWrap::accNavigate(
 
     // MSAA relationship extensions to accNavigate
     case NAVRELATION_CONTROLLED_BY:
-      xpRelation = RelationType::CONTROLLED_BY;
+      xpRelation = static_cast<int32_t>(RelationType::CONTROLLED_BY);
       break;
     case NAVRELATION_CONTROLLER_FOR:
-      xpRelation = RelationType::CONTROLLER_FOR;
+      xpRelation = static_cast<int32_t>(RelationType::CONTROLLER_FOR);
       break;
     case NAVRELATION_LABEL_FOR:
-      xpRelation = RelationType::LABEL_FOR;
+      xpRelation = static_cast<int32_t>(RelationType::LABEL_FOR);
       break;
     case NAVRELATION_LABELLED_BY:
-      xpRelation = RelationType::LABELLED_BY;
+      xpRelation = static_cast<int32_t>(RelationType::LABELLED_BY);
       break;
     case NAVRELATION_MEMBER_OF:
-      xpRelation = RelationType::MEMBER_OF;
+      xpRelation = static_cast<int32_t>(RelationType::MEMBER_OF);
       break;
     case NAVRELATION_NODE_CHILD_OF:
-      xpRelation = RelationType::NODE_CHILD_OF;
+      xpRelation = static_cast<int32_t>(RelationType::NODE_CHILD_OF);
       break;
     case NAVRELATION_FLOWS_TO:
-      xpRelation = RelationType::FLOWS_TO;
+      xpRelation = static_cast<int32_t>(RelationType::FLOWS_TO);
       break;
     case NAVRELATION_FLOWS_FROM:
-      xpRelation = RelationType::FLOWS_FROM;
+      xpRelation = static_cast<int32_t>(RelationType::FLOWS_FROM);
       break;
     case NAVRELATION_SUBWINDOW_OF:
-      xpRelation = RelationType::SUBWINDOW_OF;
+      xpRelation = static_cast<int32_t>(RelationType::SUBWINDOW_OF);
       break;
     case NAVRELATION_EMBEDS:
-      xpRelation = RelationType::EMBEDS;
+      xpRelation = static_cast<int32_t>(RelationType::EMBEDS);
       break;
     case NAVRELATION_EMBEDDED_BY:
-      xpRelation = RelationType::EMBEDDED_BY;
+      xpRelation = static_cast<int32_t>(RelationType::EMBEDDED_BY);
       break;
     case NAVRELATION_POPUP_FOR:
-      xpRelation = RelationType::POPUP_FOR;
+      xpRelation = static_cast<int32_t>(RelationType::POPUP_FOR);
       break;
     case NAVRELATION_PARENT_WINDOW_OF:
-      xpRelation = RelationType::PARENT_WINDOW_OF;
+      xpRelation = static_cast<int32_t>(RelationType::PARENT_WINDOW_OF);
       break;
     case NAVRELATION_DEFAULT_BUTTON:
-      xpRelation = RelationType::DEFAULT_BUTTON;
+      xpRelation = static_cast<int32_t>(RelationType::DEFAULT_BUTTON);
       break;
     case NAVRELATION_DESCRIBED_BY:
-      xpRelation = RelationType::DESCRIBED_BY;
+      xpRelation = static_cast<int32_t>(RelationType::DESCRIBED_BY);
       break;
     case NAVRELATION_DESCRIPTION_FOR:
-      xpRelation = RelationType::DESCRIPTION_FOR;
+      xpRelation = static_cast<int32_t>(RelationType::DESCRIPTION_FOR);
       break;
     case NAVRELATION_NODE_PARENT_OF:
-      xpRelation = RelationType::NODE_PARENT_OF;
+      xpRelation = static_cast<int32_t>(RelationType::NODE_PARENT_OF);
       break;
 
     default:
